# kursach_itog

./: CMakeLists.txt  Card.cpp  Database.cpp  Database.h  Dockerfile  EmailSender.cpp  Game.cpp  Game.h  README.md  docker-compose.yml  main.cpp
